chores:correct all path

--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ p {
 Navbar
 ===============
 */
-nav {
+/* nav {
   background: var(--clr-white);
   box-shadow: var(--light-shadow);
 }
@@ -231,4 +231,4 @@ nav {
   .social-icons a:hover {
     color: var(--clr-primary-7);
   }
-}
+} */
