--- a/src/index.scss
+++ b/src/index.scss
@@ -44,3 +44,29 @@ Variables
     --max-width: 1170px;
     --fixed-width: 620px;
   }
+ 
+  * {
+    margin: 0;
+    padding: 0;
+    text-decoration:none;
+    list-style-type:none
+  }
+  
+  .menu-container {
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    background-color:#000;
+  }
+  .menu-container li{
+    margin:10px;
+    color:white;
+    font-size :20px;
+  }
+  footer{
+    text-align: center;
+    font-size: 20px;
+    background-color: #000;
+    color: #fff;
+    padding: 1rem 0px;
+  }
