chores:increase font size of page texts

--- a/src/index.css
+++ b/src/index.css
@@ -70,4 +70,8 @@ footer {
   background-color: #000;
   color: #fff;
   padding: 1rem 0px;
+}
+
+.page-header h2 {
+  font-size: 3rem;
 }/*# sourceMappingURL=index.css.map */
