--- a/src/index.scss
+++ b/src/index.scss
@@ -75,3 +75,13 @@ Variables
   .page-header h2{
     font-size: 3rem;
   }
+  .about-btn a{
+margin: 10px;
+background-color: #000;
+color: #fff;
+padding: 5px 10px;
+border-radius: 5px;
+  }
+  .about-btn{
+    margin-top: 3rem;
+  }
