--- a/src/index.scss
+++ b/src/index.scss
@@ -75,6 +75,10 @@ Variables
   .page-header h2{
     font-size: 3rem;
   }
+  .page h2{
+    margin: 10rem 0px 10rem 0px;
+
+  }
   .about-btn a{
 margin: 10px;
 background-color: #000;
@@ -84,4 +88,35 @@ border-radius: 5px;
   }
   .about-btn{
     margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+  .route-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+    height: 100px;
+    width: 100px;
+    background-color: #000;
+    color: #fff;
+    padding: 5px
+  }
+  input{
+    border: 1px solid #000;
+    text-align: center;
+    font-size: 2rem;
+  }
+  [input="search"]{
+    padding: 10px 15px;
+
+  }
+  .input-cont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
   }
