--- a/src/index.scss
+++ b/src/index.scss
@@ -120,3 +120,8 @@ border-radius: 5px;
     margin-top: 4rem;
     margin-bottom: 4rem;
   }
+  .banner-text{
+    position: absolute;
+    z-index: 20;
+    top: 20%;
+  }
