--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,9 @@ Variables
     text-decoration:none;
     list-style-type:none
   }
+  a{
+    margin: 10px;
+  }
   
   .menu-container {
     display: flex;
@@ -126,3 +129,10 @@ border-radius: 5px;
     top: 20%;
     color: #fff;
   }
+  .active{
+    // background-color: red;
+    color: red;
+    padding: 5px;
+    // border-radius: 5px;
+    border-bottom: 1px solid #fff;
+}
