chores:change the about btns colors

--- a/src/index.scss
+++ b/src/index.scss
@@ -82,16 +82,16 @@ Variables
     margin: 10rem 0px 10rem 0px;
 
   }
-  .about-btn a{
-margin: 10px;
-background-color: #000;
-color: #fff;
-padding: 5px 10px;
-border-radius: 5px;
-  }
+//   .about-btn a{
+// margin: 10px;
+// background-color: #000;
+// color: #fff;
+// padding: 5px 10px;
+// border-radius: 5px;
+//   }
   .about-btn{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    // margin-top: 3rem;
+    // margin-bottom: 3rem;
   }
   .route-items{
     display: flex;
@@ -102,7 +102,7 @@ border-radius: 5px;
     margin-bottom: 3rem;
     height: 100px;
     width: 100px;
-    background-color: #000;
+    // background-color: #000;
     color: #fff;
     padding: 5px
   }
