--- a/src/index.scss
+++ b/src/index.scss
@@ -89,10 +89,10 @@ Variables
 // padding: 5px 10px;
 // border-radius: 5px;
 //   }
-  .about-btn{
-    // margin-top: 3rem;
-    // margin-bottom: 3rem;
-  }
+  // .about-btn{
+  //   // margin-top: 3rem;
+  //   // margin-bottom: 3rem;
+  // }
   .route-items{
     display: flex;
     justify-content: center;
@@ -102,7 +102,7 @@ Variables
     margin-bottom: 3rem;
     height: 100px;
     width: 100px;
-    // background-color: #000;
+    background-color: #000;
     color: #fff;
     padding: 5px
   }
